--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  width: 100%;
+  width: 100vw;
   overflow-x: hidden;
 }
 
